--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <meta property="og:image" content="https://vvkvijaykrishna.github.io/examples/preview.JPG" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@varad_bhogayata" />
+    <meta name="twitter:site" content="@Vijay_bhogayata" />
     <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
     <meta name="twitter:description" content="Automation Engineer" />
     <meta name="author" content="Vijaya Krishna Veerisetty" />
@@ -150,7 +150,7 @@
                 4. mdi-file-attachment
                 5. mdi-file-folder-shared
                 -->
-                <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
+                <!-- <a aria-label="Open Vijay's resume in a new tab" href="#resume" target="_blank"
                   onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
                   class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
                 <a aria-label="Open Vijay's resume in a new tab" href="https://vvkvijaykrishna.github.io/assets/resume/Resume_robotics.pdf" target="_blank"
@@ -240,7 +240,7 @@
                                 </button>
                             </a>
 
-                            <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
+                            <!-- <a href="https://angel.co/u/Vijay_bhogayata" target="_blank">
                           <button class="icon-btn angellist">
                             <i class="fa fa-angellist"></i>
                           </button>
@@ -450,7 +450,7 @@
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-external-link"></i>
                                     </a>
-                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/music-player"
+                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/music-player"
                                        target="_blank" data-position="top" data-tooltip="View Source"
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-github"></i>
@@ -491,7 +491,7 @@
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-external-link"></i>
                                     </a>
-                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/QuizUp"
+                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/QuizUp"
                                        target="_blank" data-position="top" data-tooltip="View Source"
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-github"></i>
@@ -529,7 +529,7 @@
                           data-tooltip="View Online"
                           class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                             class="fa fa-external-link"></i></a>
-                        <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/django-local-library"
+                        <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/django-local-library"
                           target="_blank" data-position="top" data-tooltip="View Source"
                           class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                             class="fa fa-github"></i></a>
@@ -571,7 +571,7 @@
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-external-link"></i>
                                     </a>
-                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/flask-blog"
+                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/flask-blog"
                                        target="_blank" data-position="top" data-tooltip="View Source"
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-github"></i>
@@ -615,7 +615,7 @@
                                 </ul>
                                 <div class="card-action">
                                     <a aria-label="Visit the GitHub repo for  project"
-                                       href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
+                                       href="https://github.com/Vijaybhogayata/visual-question-answering" target="_blank"
                                        data-position="top" data-tooltip="View Source"
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-github"></i>
@@ -659,7 +659,7 @@
                                 </ul>
                                 <!-- TODO: UPLOAD THIS PROJECT ON GITHUB -->
                                 <div class="card-action">
-                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/"
                                        target="_blank" data-position="top" data-tooltip="View Source"
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-github"></i>
@@ -701,7 +701,7 @@
 
                                 </ul>
                                 <div class="card-action">
-                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/"
                                        target="_blank" data-position="top" data-tooltip="View Source"
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-github"></i>
@@ -741,7 +741,7 @@
                                 </ul>
                                 <div class="card-action">
                                     <a aria-label="Visit the GitHub repo for  project"
-                                       href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
+                                       href="https://github.com/Vijaybhogayata/visual-question-answering" target="_blank"
                                        data-position="top" data-tooltip="View Source"
                                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                                         <i class="fa fa-github"></i>
@@ -899,70 +899,74 @@
             <h3 class="page-title white-text teal">Education</h3>
             <div class="container">
                 <div class="row">
-                    <!-- Education -->
-                    <div class="col s12 m6 l6">
-                        <div class="card">
-                            <div class="card-content">
-                                <p>
-                                    <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
-                                </p>
-                                <p class="brown-text">Tempe, USA</p>
-                                <p>
-                                    <b>Degree: </b>Master of Science in Computer Science
-                                    <br>
-                                    <b>CGPA: </b>4.0/4.0
-                                </p>
-
-                                <ul>
-                                    <p>
-                                        <b>Relevant Courseworks:</b>
-                                        <ul>
-                                            <li>Distributed Database Systems</li>
-                                            <li>Cloud Computing</li>
-                                            <li>Foundations of Algorithms</li>
-                                        </ul>
-                                    </p>
-
-                                </ul>
-                            </div>
-                        </div>
-
-
-                    </div>
+                    <!-- Master's Degree -->
                     <div class="col s12 m6 l6">
                         <div class="card">
                             <div class="card-content">
                                 <p>
                                     <span class="card-title">
-                                        <a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">
-                                            School of Engineering and Applied Science, Ahmedabad
-                                            University
+                                        <a href="https://www.colorado.edu/" target="_blank" class="teal-text hoverline">
+                                            University of Colorado, Boulder
                                         </a>
                                     </span>
                                 </p>
-                                <p class="brown-text">Ahmedabad, India</p>
+                                <p class="brown-text">Boulder, USA</p>
                                 <p>
-                                    <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                                    <b>Degree: </b>Master of Science in Mechanical Engineering
                                     <br>
-                                    <b>CGPA: </b>3.13/4.33
+                                    <b>Graduation: </b>May 2023
                                 </p>
 
                                 <ul>
                                     <p>
                                         <b>Relevant Courseworks:</b>
                                         <ul>
-                                            <li>Data Structures and Algorithms</li>
-                                            <li>Database Management Systems</li>
-                                            <li>Operating Systems</li>
-                                            <li>Machine Learning</li>
-                                            <li>Computer Vision</li>
+                                            <li>Motion Planning</li>
+                                            <li>Linear Control Systems</li>
+                                            <li>Feedback Control</li>
+                                            <li>Mechatronics</li>
+                                            <li>Digital Control Systems</li>
+                                            <li>Advanced Robotics</li>
                                         </ul>
                                     </p>
-
                                 </ul>
                             </div>
                         </div>
                     </div>
+
+                    <!-- Bachelor's Degree -->
+                    <div class="col s12 m6 l6">
+                        <div class="card">
+                            <div class="card-content">
+                                <p>
+                                    <span class="card-title">
+                                        <a href="https://nitc.ac.in/" target="_blank" class="teal-text hoverline">
+                                            National Institute of Technology, Calicut
+                                        </a>
+                                    </span>
+                                </p>
+                                <p class="brown-text">Calicut, India</p>
+                                <p>
+                                    <b>Degree: </b>Bachelor of Science in Mechanical Engineering
+                                    <br>
+                                    <b>Graduation: </b>June 2021
+                                </p>
+
+                                <ul>
+                                    <p>
+                                        <b>Relevant Courseworks:</b>
+                                        <ul>
+                                            <li>Introduction to Robotics</li>
+                                            <li>Control Systems</li>
+                                            <li>Kinematics and Dynamics of Machinery</li>
+                                            <li>Machine Design</li>
+                                        </ul>
+                                    </p>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -972,32 +976,32 @@
             <h3 class="page-title white-text teal">Contact</h3>
             <div class="container">
                 <p>
-                    <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+                    <a aria-label="Call Vijay" data-position="top" data-tooltip="Call Vijay"
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                        <i class="fa fa-phone"></i><a aria-label="Call Varad">+14805722456</a>
+                        <i class="fa fa-phone"></i><a aria-label="Call Vijay">+17207613783</a>
                     </a>
                 </p>
                 <p>
-                    <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-                       data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                        <i class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-                                                         class="hoverline">vbhogayata@gmail.com</a>
+                    <a aria-label="Email Vijay" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
+                       data-tooltip="Email Vijay" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+                        <i class="fa fa-envelope"></i><a aria-label="Email Vijay" href="mailto:vbhogayata@gmail.com"
+                                                         class="hoverline">vvkvijaykrishna@gmail.com</a>
                     </a>
                 </p>
                 <p>
-                    <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-                       data-position="top" data-tooltip="View Varad on GitHub"
+                    <a aria-label="View Vijay on GitHub" href="http://github.com/Vijaybhogayata" target="_blank"
+                       data-position="top" data-tooltip="View Vijay on GitHub"
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                        <i class="fa fa-github"></i><a aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-                                                       target="_blank">github.com/varadbhogayata</a>
+                        <i class="fa fa-github"></i><a aria-label="Vijay on Github" href="http://github.com/Vijaybhogayata" class="hoverline"
+                                                       target="_blank">github.com/Vijaybhogayata</a>
                     </a>
                 </p>
                 <p>
-                    <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-                       data-position="top" data-tooltip="View Varad on LinkedIn"
+                    <a aria-label="View Vijay on LinkedIn" href="http://linkedin.com/in/Vijaybhogayata" target="_blank"
+                       data-position="top" data-tooltip="View Vijay on LinkedIn"
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                        <i class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-                                                         class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a>
+                        <i class="fa fa-linkedin"></i><a aria-label="Vijay on LinkedIn" href="http://linkedin.com/in/Vijaybhogayata"
+                                                         class="hoverline" target="_blank">linkedin.com/in/Vijaybhogayata</a>
                     </a>
                 </p>
             </div>
