--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="role brown-text text-darken-2">Teaching Assistant (MCEN 1025 - SolidWorks)</div>
+                        <div class="role brown-text text-darken-2">Teaching Assistant (SolidWorks)</div>
                         <ul>
                             <li>Guided 25 undergraduate students in CAD labs covering part, drawing, and assembly modeling.</li>
                             <li>Hosted office hours, graded quizzes, and provided personalized assistance in SolidWorks.</li>
@@ -982,25 +982,25 @@
                     </a>
                 </p>
                 <p>
-                    <a aria-label="Email Vijay" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
+                    <a aria-label="Email Vijay" href="mailto:vvkvijaykrishna@gmail.com" target="_blank" data-position="top"
                        data-tooltip="Email Vijay" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                        <i class="fa fa-envelope"></i><a aria-label="Email Vijay" href="mailto:vbhogayata@gmail.com"
+                        <i class="fa fa-envelope"></i><a aria-label="Email Vijay" href="mailto:vvkvijaykrishna@gmail.com"
                                                          class="hoverline">vvkvijaykrishna@gmail.com</a>
                     </a>
                 </p>
                 <p>
-                    <a aria-label="View Vijay on GitHub" href="http://github.com/Vijaybhogayata" target="_blank"
+                    <a aria-label="View Vijay on GitHub" href="https://github.com/vvkvijaykrishna" target="_blank"
                        data-position="top" data-tooltip="View Vijay on GitHub"
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                        <i class="fa fa-github"></i><a aria-label="Vijay on Github" href="http://github.com/Vijaybhogayata" class="hoverline"
+                        <i class="fa fa-github"></i><a aria-label="Vijay on Github" href="https://github.com/vvkvijaykrishna" class="hoverline"
                                                        target="_blank">github.com/Vijaybhogayata</a>
                     </a>
                 </p>
                 <p>
-                    <a aria-label="View Vijay on LinkedIn" href="http://linkedin.com/in/Vijaybhogayata" target="_blank"
+                    <a aria-label="View Vijay on LinkedIn" href="https://www.linkedin.com/in/vijaya-krishna-veerisetty-723063182/" target="_blank"
                        data-position="top" data-tooltip="View Vijay on LinkedIn"
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                        <i class="fa fa-linkedin"></i><a aria-label="Vijay on LinkedIn" href="http://linkedin.com/in/Vijaybhogayata"
+                        <i class="fa fa-linkedin"></i><a aria-label="Vijay on LinkedIn" href="https://www.linkedin.com/in/vijaya-krishna-veerisetty-723063182/"
                                                          class="hoverline" target="_blank">linkedin.com/in/Vijaybhogayata</a>
                     </a>
                 </p>
