--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                     <i class="fa fa-linkedin"></i>
                                 </button>
                             </a>
-                            <a href="https://vvkvijaykrishna.github.io/" target="_blank">
+                            <a href="https://github.com/vvkvijaykrishna" target="_blank">
                                 <button class="icon-btn github">
                                     <i class="fa fa-github"></i>
                                 </button>
@@ -993,7 +993,7 @@
                        data-position="top" data-tooltip="View Vijay on GitHub"
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                         <i class="fa fa-github"></i><a aria-label="Vijay on Github" href="https://github.com/vvkvijaykrishna" class="hoverline"
-                                                       target="_blank">github.com/Vijaybhogayata</a>
+                                                       target="_blank">github.com/vvkvijaykrishna</a>
                     </a>
                 </p>
                 <p>
@@ -1001,7 +1001,7 @@
                        data-position="top" data-tooltip="View Vijay on LinkedIn"
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                         <i class="fa fa-linkedin"></i><a aria-label="Vijay on LinkedIn" href="https://www.linkedin.com/in/vijaya-krishna-veerisetty-723063182/"
-                                                         class="hoverline" target="_blank">linkedin.com/in/Vijaybhogayata</a>
+                        class="hoverline" target="_blank">linkedin.com/in/vijaya-krishna-veerisetty</a>
                     </a>
                 </p>
             </div>
@@ -1012,7 +1012,7 @@
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+        strings: ["Robotics", "Mechanical Design", "Systems Integration"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
