--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
                     <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
                         <div class="caption">
                             <h2>Hi, I'm <span class="teal">Vijaya Krishna Veerisetty.</span></h2>
-                            <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
+                            <h5 style="color:#fff"><span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
                             <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-                            <h5>SAutomation Engineer specializing in robotics, motion planning, and industrial automation.</h5>
+                            <h5>Automation Engineer specializing in robotics, motion planning, and industrial automation.</h5>
                         </div>
                         <div class="social">
                             <a href="https://www.linkedin.com/in/vijaya-krishna-veerisetty-723063182/" target="_blank">
