--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 5. mdi-file-folder-shared
                 -->
                 <!-- <a aria-label="Open Vijay's resume in a new tab" href="#resume" target="_blank"
-                  onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
+                  onclick="window.open('')"
                   class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
                 <a aria-label="Open Vijay's resume in a new tab" href="https://vvkvijaykrishna.github.io/assets/resume/Resume_robotics.pdf" target="_blank"
                    class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
@@ -343,7 +343,7 @@
                         </ul>
                     </div>
                     <div class="card-action">
-                        <span>Jul 2023 – Present | North Bethesda, MD</span>
+                        <span>Jul 2023 ï¿½ Present | North Bethesda, MD</span>
                     </div>
                 </div>
 
@@ -373,7 +373,7 @@
                         </ul>
                     </div>
                     <div class="card-action">
-                        <span>Jun 2022 – Aug 2022 | North Bethesda, MD</span>
+                        <span>Jun 2022 ï¿½ Aug 2022 | North Bethesda, MD</span>
                     </div>
                 </div>
 
@@ -391,7 +391,7 @@
                                 <p>
                                     <span class="card-title">
                                         <a href="https://www.colorado.edu/" target="_blank"
-                                           class="teal-text hoverline">University of Colorado, Boulder</a>
+                                           class="teal-text hoverline">University of Colorado</a>
                                     </span>
                                 </p>
                             </div>
@@ -403,7 +403,7 @@
                         </ul>
                     </div>
                     <div class="card-action">
-                        <span>Aug 2021 – Dec 2021 | Boulder, CO</span>
+                        <span>Aug 2021 ï¿½ Dec 2021 | Boulder, CO</span>
                     </div>
                 </div>
 
