--- a/index.html
+++ b/index.html
@@ -410,101 +410,177 @@
             </div>
         </section>
 
+
         <!-- Fourth Section: Projects -->
         <section id="projects" class="section scrollspy">
             <h3 class="page-title white-text teal">Projects</h3>
             <div class="container">
-                <div class="row">
 
-                    <div class="col s12 m6 l4">
-                        <div class="card medium">
-                            <div class="card-image waves-effect waves-block waves-light">
-                                <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
+                <!-- Project 1: Autonomous Bartender Robot -->
+                <div class="card">
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col s12 m2">
+                                <img alt="Autonomous Bartender Robot" src="/assets/img/bartender_robot.png" class="responsive-img center-block" />
                             </div>
-                            <div class="card-content">
-                                <span class="card-title activator teal-text hoverline">
-                                    Music Player Web-App<i class="mdi-navigation-more-vert right"></i>
-                                </span>
+                            <div class="col s12 m10">
                                 <p>
-                                    A music streaming web app based on Django
+                                    <span class="card-title teal-text hoverline">Autonomous Bartender Robot</span>
                                 </p>
                             </div>
-                            <div class="card-reveal">
-                                <!-- TODO: change this -- only close button -->
-                                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                                <span class="card-title grey-text">
-                                    <small>Accomplishments</small><i class="mdi-navigation-close right"></i>
-                                </span>
-                                <ul>
-                                    <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, AWS S3, Heroku</li>
-                                    <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                                    <li>Search and filter songs based on language and singer.</li>
-                                    <li>Create multiple playlists and add/remove songs to/from playlist.</li>
-                                    <li>Scroll through recently played/viewed songs.</li>
-
-
-                                </ul>
-                                <div class="card-action">
-                                    <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
-                                       data-tooltip="View Online"
-                                       class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                                        <i class="fa fa-external-link"></i>
-                                    </a>
-                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/music-player"
-                                       target="_blank" data-position="top" data-tooltip="View Source"
-                                       class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                                        <i class="fa fa-github"></i>
-                                    </a>
-                                </div>
-                            </div>
                         </div>
+                        <div class="role brown-text text-darken-2">Jan 2022 – May 2022</div>
+                        <ul>
+                            <li>Implemented voice, face, and ID recognition using Machine Learning for mixing and serving drinks using a robotic arm.</li>
+                            <li>Integrated tactile sensors for gripping, ultrasound sensors, and developed algorithms for a 5-DOF series manipulator.</li>
+                            <li>Used ROS, Arduino, Raspberry Pi, and Nvidia Jetson to control the robotic system.</li>
+                            <li><b>Tools:</b> ROS, OpenCV, Machine Learning, Arduino, Raspberry Pi, Nvidia Jetson</li>
+                        </ul>
                     </div>
+                </div>
 
-                    <div class="col s12 m6 l4">
-                        <div class="card medium">
-                            <div class="card-image waves-effect waves-block waves-light">
-                                <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
+                <!-- Project 2: Autonomous Vehicle Control -->
+                <!--<div class="card">
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col s12 m2">
+                                <img alt="Autonomous Vehicle Control" src="/assets/img/autonomous_vehicle.png" class="responsive-img center-block" />
                             </div>
-                            <div class="card-content">
-                                <span class="card-title activator teal-text hoverline">
-                                    Quiz Web-App<i class="mdi-navigation-more-vert right"></i>
-                                </span>
+                            <div class="col s12 m10">
                                 <p>
-                                    A quiz playing web app based on Django
+                                    <span class="card-title teal-text hoverline">Autonomous Vehicle Control</span>
                                 </p>
                             </div>
-                            <div class="card-reveal">
-                                <!-- TODO: change this -- only close button -->
-                                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                                <span class="card-title grey-text">
-                                    <small>Accomplishments</small><i class="mdi-navigation-close right"></i>
-                                </span>
-                                <ul>
-                                    <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, Heroku</li>
-                                    <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                                    <li>Play Quiz and see the leaderboard</li>
+                        </div>
+                        <div class="role brown-text text-darken-2">Jan 2023 – May 2023</div>
+                        <ul>
+                            <li>Implemented motion planning using RRT*, integrating LiDAR data with a Particle Filter and IMU sensor.</li>
+                            <li>Developed and tuned a PID controller for optimal vehicle trajectory tracking.</li>
+                            <li>Used ROS for real-time vehicle control simulation and testing.</li>
+                            <li><b>Tools:</b> ROS, Python, LiDAR, IMU, PID Controller</li>
+                        </ul>
+                    </div>
+                </div>-->
 
-                                </ul>
-                                <div class="card-action">
-                                    <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
-                                       data-tooltip="View Online"
-                                       class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                                        <i class="fa fa-external-link"></i>
-                                    </a>
-                                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/QuizUp"
-                                       target="_blank" data-position="top" data-tooltip="View Source"
-                                       class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
-                                        <i class="fa fa-github"></i>
-                                    </a>
-                                </div>
+                <!-- Project 3: Kino-dynamic Motion Planning for Multiple 3-DOF Manipulators -->
+                <!--<div class="card">
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col s12 m2">
+                                <img alt="Kino-dynamic Motion Planning" src="/assets/img/motion_planning.png" class="responsive-img center-block" />
+                            </div>
+                            <div class="col s12 m10">
+                                <p>
+                                    <span class="card-title teal-text hoverline">Kino-dynamic Motion Planning for Multiple 3-DOF Manipulators</span>
+                                </p>
                             </div>
                         </div>
+                        <div class="role brown-text text-darken-2">Sep 2021 - Dec 2021</div>
+                        <ul>
+                            <li>Developed motion planning algorithms using RRT for multi-agent robot manipulators.</li>
+                            <li>Used OMPL libraries to simulate collision-free trajectory planning.</li>
+                            <li>Implemented kinematic constraints to optimize robot movement efficiency.</li>
+                            <li><b>Tools:</b> OMPL, RRT Algorithm, Python, Robot Kinematics</li>
+                        </ul>
+                    </div>
+                </div>-->
 
-                    <!-- ************* -->
-                </div>
             </div>
         </section>
 
+        <!-- Fourth Section: Projects -->
+        <!--<section id="projects" class="section scrollspy">
+        <h3 class="page-title white-text teal">Projects</h3>
+        <div class="container">
+            <div class="row">
+
+                <div class="col s12 m6 l4">
+                    <div class="card medium">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator teal-text hoverline">
+                                Music Player Web-App<i class="mdi-navigation-more-vert right"></i>
+                            </span>
+                            <p>
+                                A music streaming web app based on Django
+                            </p>
+                        </div>
+                        <div class="card-reveal">-->
+        <!-- TODO: change this -- only close button -->
+        <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+        <!--<span class="card-title grey-text">
+                    <small>Accomplishments</small><i class="mdi-navigation-close right"></i>
+                </span>
+                <ul>
+                    <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, AWS S3, Heroku</li>
+                    <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
+                    <li>Search and filter songs based on language and singer.</li>
+                    <li>Create multiple playlists and add/remove songs to/from playlist.</li>
+                    <li>Scroll through recently played/viewed songs.</li>
+
+
+                </ul>
+                <div class="card-action">
+                    <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
+                       data-tooltip="View Online"
+                       class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+                        <i class="fa fa-external-link"></i>
+                    </a>
+                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/music-player"
+                       target="_blank" data-position="top" data-tooltip="View Source"
+                       class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+                        <i class="fa fa-github"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m6 l4">
+        <div class="card medium">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
+            </div>
+            <div class="card-content">
+                <span class="card-title activator teal-text hoverline">
+                    Quiz Web-App<i class="mdi-navigation-more-vert right"></i>
+                </span>
+                <p>
+                    A quiz playing web app based on Django
+                </p>
+            </div>
+            <div class="card-reveal">-->
+        <!-- TODO: change this -- only close button -->
+        <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+        <!--<span class="card-title grey-text">
+                <small>Accomplishments</small><i class="mdi-navigation-close right"></i>
+            </span>
+            <ul>
+                <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, Heroku</li>
+                <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
+                <li>Play Quiz and see the leaderboard</li>
+
+            </ul>
+            <div class="card-action">
+                <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
+                   data-tooltip="View Online"
+                   class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+                    <i class="fa fa-external-link"></i>
+                </a>
+                <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/QuizUp"
+                   target="_blank" data-position="top" data-tooltip="View Source"
+                   class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+                    <i class="fa fa-github"></i>
+                </a>
+            </div>
+        </div>
+    </div>-->
+        <!-- ************* -->
+        <!--</div>
+        </div>
+    </section>-->
         <!-- Fifth Section: Skills -->
         <section id="skills" class="section scrollspy">
             <h3 class="page-title white-text teal">Skills</h3>
@@ -750,7 +826,7 @@
                        data-position="top" data-tooltip="View Vijay on LinkedIn"
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                         <i class="fa fa-linkedin"></i><a aria-label="Vijay on LinkedIn" href="https://www.linkedin.com/in/vijaya-krishna-veerisetty-723063182/"
-                        class="hoverline" target="_blank">linkedin.com/in/vijaya-krishna-veerisetty</a>
+                                                         class="hoverline" target="_blank">linkedin.com/in/vijaya-krishna-veerisetty</a>
                     </a>
                 </p>
             </div>
