--- a/index.html
+++ b/index.html
@@ -420,18 +420,35 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="row">
-                            <div class="col s12 m2">
-                                <img alt="Autonomous Bartender Robot" src="/assets/img/bartender-full-1.png" class="responsive-img center-block" />
-                            </div>
-                            <div class="col s12 m10">
+                            <div class="col s12">
                                 <p>
-                                    <span class="card-title teal-text hoverline">Autonomous Bartender Robot</span>
+                                    <span class="card-title teal-text hoverline" style="text-align: left; display: block;">Autonomous Bartender Robot</span>
                                 </p>
                             </div>
                         </div>
                         <div class="role brown-text text-darken-2">Jan 2022 – May 2022</div>
                         <ul>
                             <li>Implemented voice, face, and ID recognition using Machine Learning for mixing and serving drinks using a robotic arm.</li>
+
+                            <!-- First Image -->
+                            <div class="row">
+                                <div class="col s12">
+                                    <img alt="Bartender Robot in Action" src="/assets/img/bartender-full-1.png" class="responsive-img center-block" />
+                                </div>
+                            </div>
+
+                            <!-- Second Image with Label -->
+                            <div class="row">
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Components" src="/assets/img/bartender-cad-2.png" class="responsive-img center-block" />
+                                </div>
+                                <div class="col s12 m6">
+                                    <div class="card-panel teal lighten-4">
+                                        <p class="black-text"><b>Image Description:</b> A detailed view of the bartender robot’s gripper mechanism and sensor integration.</p>
+                                    </div>
+                                </div>
+                            </div>
+
                             <li>Integrated tactile sensors for gripping, ultrasound sensors, and developed algorithms for a 5-DOF series manipulator.</li>
                             <li>Used ROS, Arduino, Raspberry Pi, and Nvidia Jetson to control the robotic system.</li>
                             <li><b>Tools:</b> ROS, OpenCV, Machine Learning, Arduino, Raspberry Pi, Nvidia Jetson</li>
@@ -439,51 +456,51 @@
                     </div>
                 </div>
 
+
                 <!-- Project 2: Autonomous Vehicle Control -->
                 <!--<div class="card">
-                    <div class="card-content">
-                        <div class="row">
-                            <div class="col s12 m2">
-                                <img alt="Autonomous Vehicle Control" src="/assets/img/autonomous_vehicle.png" class="responsive-img center-block" />
-                            </div>
-                            <div class="col s12 m10">
-                                <p>
-                                    <span class="card-title teal-text hoverline">Autonomous Vehicle Control</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="role brown-text text-darken-2">Jan 2023 – May 2023</div>
-                        <ul>
-                            <li>Implemented motion planning using RRT*, integrating LiDAR data with a Particle Filter and IMU sensor.</li>
-                            <li>Developed and tuned a PID controller for optimal vehicle trajectory tracking.</li>
-                            <li>Used ROS for real-time vehicle control simulation and testing.</li>
-                            <li><b>Tools:</b> ROS, Python, LiDAR, IMU, PID Controller</li>
-                        </ul>
-                    </div>
-                </div>-->
-
+        <div class="card-content">
+            <div class="row">
+                <div class="col s12 m2">
+                    <img alt="Autonomous Vehicle Control" src="/assets/img/autonomous_vehicle.png" class="responsive-img center-block" />
+                </div>
+                <div class="col s12 m10">
+                    <p>
+                        <span class="card-title teal-text hoverline">Autonomous Vehicle Control</span>
+                    </p>
+                </div>
+            </div>
+            <div class="role brown-text text-darken-2">Jan 2023 – May 2023</div>
+            <ul>
+                <li>Implemented motion planning using RRT*, integrating LiDAR data with a Particle Filter and IMU sensor.</li>
+                <li>Developed and tuned a PID controller for optimal vehicle trajectory tracking.</li>
+                <li>Used ROS for real-time vehicle control simulation and testing.</li>
+                <li><b>Tools:</b> ROS, Python, LiDAR, IMU, PID Controller</li>
+            </ul>
+        </div>
+    </div>-->
                 <!-- Project 3: Kino-dynamic Motion Planning for Multiple 3-DOF Manipulators -->
                 <!--<div class="card">
-                    <div class="card-content">
-                        <div class="row">
-                            <div class="col s12 m2">
-                                <img alt="Kino-dynamic Motion Planning" src="/assets/img/motion_planning.png" class="responsive-img center-block" />
-                            </div>
-                            <div class="col s12 m10">
-                                <p>
-                                    <span class="card-title teal-text hoverline">Kino-dynamic Motion Planning for Multiple 3-DOF Manipulators</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="role brown-text text-darken-2">Sep 2021 - Dec 2021</div>
-                        <ul>
-                            <li>Developed motion planning algorithms using RRT for multi-agent robot manipulators.</li>
-                            <li>Used OMPL libraries to simulate collision-free trajectory planning.</li>
-                            <li>Implemented kinematic constraints to optimize robot movement efficiency.</li>
-                            <li><b>Tools:</b> OMPL, RRT Algorithm, Python, Robot Kinematics</li>
-                        </ul>
-                    </div>
-                </div>-->
+        <div class="card-content">
+            <div class="row">
+                <div class="col s12 m2">
+                    <img alt="Kino-dynamic Motion Planning" src="/assets/img/motion_planning.png" class="responsive-img center-block" />
+                </div>
+                <div class="col s12 m10">
+                    <p>
+                        <span class="card-title teal-text hoverline">Kino-dynamic Motion Planning for Multiple 3-DOF Manipulators</span>
+                    </p>
+                </div>
+            </div>
+            <div class="role brown-text text-darken-2">Sep 2021 - Dec 2021</div>
+            <ul>
+                <li>Developed motion planning algorithms using RRT for multi-agent robot manipulators.</li>
+                <li>Used OMPL libraries to simulate collision-free trajectory planning.</li>
+                <li>Implemented kinematic constraints to optimize robot movement efficiency.</li>
+                <li><b>Tools:</b> OMPL, RRT Algorithm, Python, Robot Kinematics</li>
+            </ul>
+        </div>
+    </div>-->
 
             </div>
         </section>
