--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                             <!-- First Image -->
                             <div class="row">
                                 <div class="col s12">
-                                    <img alt="Bartender Robot in Action" src="/assets/img/bartender-full-1.png" class="responsive-img center-block" />
+                                    <img alt="Bartender Robot in Action" src="/assets/img/bartender-full-1.png" class="responsive-img" style="width: 80%; max-width: 600px;" />
                                 </div>
                             </div>
 
@@ -445,7 +445,18 @@
                                 <div class="col s12 m6">
                                     <div class="card-panel teal lighten-4">
                                         <p class="black-text"><b>Image Description:</b> A detailed view of the bartender robot’s gripper mechanism and sensor integration.</p>
+                                        <p class="black-text"><b></b> Another point see where this goes.</p>
                                     </div>
+                                </div>
+                            </div>
+
+                            <!-- Third and Fourth Images Side-by-Side -->
+                            <div class="row">
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Close-up" src="/assets/img/bartender-stepper-5.png" class="responsive-img center-block" />
+                                </div>
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Dispensing" src="/assets/img/bartender-image-6.png" class="responsive-img center-block" />
                                 </div>
                             </div>
 
